--- a/index.html
+++ b/index.html
@@ -5,67 +5,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 
 <body>
     <div id="body">
-        <div class="player">
-            <div class="photo"></div>
+          <div class="player">
+            <div class="photo">사진</div>
+              <div id="name">이름</div>
+              <div id="point">-포인트</div>
+            </div>
+          <div class="player2">
+            <div class="photo">사진</div>
+              <div id="name">이름</div>
+              <div id="point">-포인트</div>
+            </div>
+          <div class="player3">
+            <div class="photo">사진</div>
+              <div id="name">이름</div>
+              <div id="point">-포인트</div>
+            </div>
+          <div class="player4">
+            <div class="photo">사진</div>
+              <div id="name">이름</div>
+              <div id="point">-포인트</div>
+            </div>
+      <div class="players">
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+      </div>
+      <div class="players2">
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+          <div class="players_name"></div>
+      </div>
+      <div class="matched">
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+      </div>
+      <div class="matched2">
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+      </div>
+      <div class="matched3">
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+      </div>
+      <div class="matched4">
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+          <div class="matched_player"></div>
+      </div>
+      <div class="slot_effect">
+        <div class="slot_name">
+          <p>이름</p>
         </div>
-        <div id="name"></div>
-        <div id="point"></div>
-        <div class="player">
-            <div class="photo"></div>
-        </div>
-        <div id="name"></div>
-        <div id="point"></div>
-        <div class="player">
-            <div class="photo"></div>
-        </div>
-        <div id="name"></div>
-        <div id="point"></div>
-        <div class="player">
-            <div class="photo"></div>
-        </div>
-        <div id="name"></div>
-        <div id="point"></div>
-    </div>
-    <div class="players">
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-    </div>
-    <div class="players">
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-        <div class="players_name"></div>
-    </div>
-    <div class="matched">
-        <div class="matched_player"></div>
-        <div class="matched_player"></div>
-        <div class="matched_player"></div>
-        <div class="matched_player"></div>
-    </div>
-    <div class="matched">
-        <div class="matched_player"></div>
-        <div class="matched_player"></div>
-        <div class="matched_player"></div>
-        <div class="matched_player"></div>
-    </div>
-    <div id="machine">
-        <div id="slot"></div>
-        <div id="slot_name"></div>
+      </div>
+      <div id="machine">
+          <div id="slot"></div>
+          <div id="slot_name"></div>
+      </div>
     </div>
 </body>
 
